--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title> - Fishbowl - Save the fish</title>
+  <title> - Fishbowl - Save the - fish</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
